# WarriorLang

./: CMakeLists.txt  main.cpp
cmake/: GoogleTest-CMakeLists.txt.in
include/warriorlang/: utils.hpp
include/warriorlang/AST/: AccessControlAST.hpp  BinaryExpressionAST.hpp  BooleanLiteralAST.hpp  ExpressionAST.hpp  Float32LiteralAST.hpp  Int64LiteralAST.hpp  Int8LiteralAST.hpp  LocalVariableExpressionAST.hpp  TypeMetadataAST.hpp  UInt16LiteralAST.hpp  UInt64LiteralAST.hpp  UInt8LiteralAST.hpp  UnaryExpressionAST.hpp
include/warriorlang/Frontend/: Lexer.hpp  TokenCategory.hpp  Tokenizer.hpp  WarLangToken.hpp
include/warriorlang/Parser/: Lexer.hpp  Parser.hpp  TokenCategory.hpp
lib/: CMakeLists.txt  main.cpp  utils.cpp
lib/AST/: ArgumentMetadataAST.cpp  BinaryExpressionAST.cpp  BooleanLiteralAST.cpp  CharacterLiteralAST.cpp  ClosureLiteralAST.cpp  ClosureMetadataAST.cpp  FieldMetadataAST.cpp  Float32LiteralAST.cpp  Float64LiteralAST.cpp  FunctionAST.cpp  FunctionCallExpressionAST.cpp  FunctionMetadataAST.cpp  Int16LiteralAST.cpp  Int32LiteralAST.cpp  Int64LiteralAST.cpp  Int8LiteralAST.cpp  LocalVariableExpressionAST.cpp  StringLiteralAST.cpp  TypeMetadataAST.cpp  UInt16LiteralAST.cpp  UInt32LiteralAST.cpp  UInt64LiteralAST.cpp  UInt8LiteralAST.cpp  UnaryExpressionAST.cpp
lib/Frontend/: Lexer.cpp  Tokenizer.cpp  WarLangToken.cpp
lib/Parser/: Lexer.cpp  Parser.cpp
src/: main.cpp
src/AST/: ArgumentMetadataAST.cpp  ArgumentMetadataAST.hpp  BinaryExpressionAST.cpp  BooleanLiteralAST.cpp  CharacterLiteralAST.cpp  CharacterLiteralAST.hpp  ClosureLiteralAST.cpp  ClosureLiteralAST.hpp  ClosureMetadataAST.cpp  ClosureMetadataAST.hpp  FieldMetadataAST.cpp  FieldMetadataAST.hpp  Float32LiteralAST.cpp  Float64LiteralAST.cpp  Float64LiteralAST.hpp  FunctionAST.cpp  FunctionAST.hpp  FunctionCallExpressionAST.cpp  FunctionCallExpressionAST.hpp  FunctionMetadataAST.cpp  FunctionMetadataAST.hpp  Int16LiteralAST.cpp  Int16LiteralAST.hpp  Int32LiteralAST.cpp  Int32LiteralAST.hpp  Int64LiteralAST.cpp  Int8LiteralAST.cpp  LocalVariableExpressionAST.cpp  StringLiteralAST.cpp  StringLiteralAST.hpp  TypeMetadataAST.cpp  UInt16LiteralAST.cpp  UInt32LiteralAST.cpp  UInt32LiteralAST.hpp  UInt64LiteralAST.cpp  UInt8LiteralAST.cpp  UnaryExpressionAST.cpp
src/Lexer/: Lexer.cpp  WarLangToken.cpp
unittest/: CMakeLists.txt
unittest/Frontend/: TokenizerTest.cpp
unittest/Parser/: LexerTest.cpp
